--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Get Noted</string>
+    <string name="title_activity_sign_up">SignUp</string>
+    <string name="title_activity_sign_in">SignIn</string>
 </resources>
